--- a/index.html
+++ b/index.html
@@ -14,8 +14,28 @@
 </head>
 <body>
     <!--Center and formt-->
-    <h2>Professional Summary</h2>
-    <p>Driven and detail-oriented professional eager to transition into a data analyst role. </p>
-    <p>With a background in administrative support and experience in software and hardware support, I’m excited to leverage my skills in the tech industry and embark on a new career path.</p>
+    <article>
+        <h1>Professional Summary</h1>
+            <p>Driven and detail-oriented professional eager to transition into a data analyst role. </p>
+            <p>With a background in administrative support and experience in software and hardware support, I’m excited to leverage my skills in the tech industry and embark on a new career path.</p>
+    </article>    
+    <article>
+        <h2>Skills</h2>
+            <ul>
+                <!--Rearrange bullet points-->
+                <li>Databse Management</li>
+                <li>Data Cleaning</li>
+                <li>SQL</li>
+                <li>Python</li>
+                <li>html</li>
+                <li>CSS</li>
+                <li>Javascript</li>
+                <li>Problem Solving</li>
+                <li>Time Management</li>
+                <li>Communication Skills</li>
+                <li>Team Collaboration</li>
+            </ul>
+
+    </article>
 </body>
 </html>
