--- a/index.html
+++ b/index.html
@@ -35,7 +35,41 @@
                 <li>Communication Skills</li>
                 <li>Team Collaboration</li>
             </ul>
-
+    </article>
+    <article>
+        <h2>Projects</h2>
+        <!--Insert GitHub repos-->
+        <p>League of Legends Champion Analysis</p>
+            <ul>
+                <li>Pending Update</li>
+            </ul>
+        <p>Fast Food By Zip</p>
+            <ul>
+                <li>Analyze the relationship between the number of fast food restaurants and obesity rates across different zip codes. This project utilized SQL to collect data by zip code in order to identify any correlations between obesity and the presence of fast food establishments. We then cleaned the data to ensure it was relevant to our study. Finally, we created visualizations to make the findings easily interpretable for others.</li>
+            </ul>
+        <p>Higher Education and Home Ownership</p>
+            <ul>
+                <li>Investigate the correlation between higher education levels and home ownership. This project utilized Pandas to organize the data. We gathered, cleaned, and structured the data, then created visualizations to highlight the relationship between higher education and home ownership.</li>
+            </ul>
+    </article>
+    <article>
+        <h2>Employment history</h2>
+            <h3>SENIOR CASE MANAGER </h3>
+            <h3>Nov 2017 - Present</h3>
+            <h3>Mckesson Louisville</h3>
+                <ul>
+                    <li>Conducted in-depth case analysis, identifying trends and recommending process improvements.</li>
+                    <li>Demonstrated exceptional organizational skills to maintain accurate case documentation.</li>
+                    <li>Manage complex cases, analyze patient data, and coordinate care plans. Implement process improvements, reducing case resolution time and enhancing patient outcomes.</li>
+                </ul>
+            <h3>SENIOR TECH SUPPORT ANALYST</h3>
+                <h3>May 2014 - May 2017</h3>
+                <h3>Vantiv</h3>
+                    <ul>
+                        <li>Analyzed complex technical issues, implemented solutions, and enhanced system performance for Vantiv's tech support operations.</li>
+                        <li>Streamlined support processes, reducing average resolution time and improving customer satisfaction rates at Vantiv.</li>
+                        <li>Utilize strong problem-solving skills to diagnose and address hardware and software issues.</li>
+                    </ul>
     </article>
 </body>
 </html>
