--- a/index.html
+++ b/index.html
@@ -71,5 +71,12 @@
                         <li>Utilize strong problem-solving skills to diagnose and address hardware and software issues.</li>
                     </ul>
     </article>
+    <article>
+        <h2>Education</h2>
+            <h3>Code Louisville</h3>
+                <p>Certificate of Completion of Data Analyst Pathway</p>
+            <h3>Assoicates in Science</h3>
+                <p>Jefferson Community CollegeLouisville, KY</p>
+    </article>
 </body>
 </html>
