Full Rough Draft Need CSS Editing

--- a/index.html
+++ b/index.html
@@ -79,4 +79,10 @@
                 <p>Jefferson Community CollegeLouisville, KY</p>
     </article>
 </body>
+<footer>
+    <h1>Leighton Pulliam II</h1>
+        <h2>l8onii@gmail.com</h2>
+        <h2>Github</h2>
+        <h2>LinkedIn</h2>
+</footer>
 </html>
