Github & LinkedIn Links

--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
     <title>Leighton's Resume</title>
     <header>
         <!-- Use CSS to move left to right at the top-->
-        <!-- Link both urls (Github & Linked In)-->
-        <p>Charlestown, IN       L8onii@gmail.com            502-457-6817 </p>
-        <p>Github         LinkedIn Profile</p>
+        <p style="color:black;">Charlestown, IN       L8onii@gmail.com            502-457-6817 </p>
+       <!--Fix Spacing -->
+        <p><a href="https://github.com/L8onii" target="_blank">GitHub</a>         <a href="https://www.linkedin.com/in/l8onii" target="_blank"> Profile</a></p>
         <h1>Leighton Pulliam II</h1>
     </header>
 </head>
 <body>
     <!--Center and formt-->
     <article>
-        <h1>Professional Summary</h1>
+        <h1>Professional Summary</h1>                          
             <p>Driven and detail-oriented professional eager to transition into a data analyst role. </p>
             <p>With a background in administrative support and experience in software and hardware support, I’m excited to leverage my skills in the tech industry and embark on a new career path.</p>
-    </article>    
+        </article>    
     <article>
         <h2>Skills</h2>
             <ul>
